# RayTracer

./: .gitignore  CMakeLists.txt  Makefile  README.md  test.cpp
cl/: add.cl  algo.h  div.cl  inc.h  kernel.cl  kernel.h  kernel_common.h  marcher.cl  mul.cl  objects.h  sub.cl  sum.cl  tracer.cl  tracing_base.cl
cllib/: CLGPUarray.hpp  CLarray.hpp  CLbuiltinprog.hpp  CLcontext.hpp  CLdefs.hpp  CLdevice.hpp  CLexception.hpp  CLkernel.hpp  CLlib.hpp  CLplatform.hpp  CLprogram.hpp  CLqueue.hpp  CLsources.hpp  CLutils.hpp  cllib  defs.hpp  main.cpp
cllib/include/: CLarray.hpp  CLbuiltinprog.hpp  CLcommon.hpp  CLcontext.hpp  CLdevice.hpp  CLexception.hpp  CLkernel.hpp  CLplatform.hpp  CLprogram.hpp  CLqueue.hpp  CLsources.hpp  CLutils.hpp
cllib/src/: CLarray.ipp  main.cpp
inc/: Exception.hpp  File.hpp  GPUArray.hpp  GPUArrayException.hpp  GPUKernel.hpp
include/: color.hpp  common.hpp  event_hooks.hpp  exception.hpp  linalg.hpp  objects.hpp  rtx.hpp  scene_helper.hpp  struct.hpp  utils.hpp
mandatory/: Makefile  camera.c  clean_scene_2.c  key_switcher.c  keyboard_manager.c  main.c  matrix.c  ray_traycer.h  scene_parcer_1.c  scene_parcer_4.c  screenshot.c
mlxlib/: MLXcommon.hpp  MLXcore.hpp  MLXdefs.hpp  MLXexception.hpp  MLXimage.hpp  MLXutils.hpp  MLXwindow.hpp  main.cpp  mlxlib  test.cpp
mlxlib/mlx/: Makefile.gen  mlx_clear_window.c  mlx_hook.c  mlx_int.h  mlx_int_set_win_event_mask.c  mlx_mouse_hook.c  mlx_new_image.c  mlx_new_window.c  mlx_pixel_put.c  mlx_put_image_to_window.c
mlxlib/mlxlinux/: Makefile  mlx.h  mlx_destroy_image.c  mlx_destroy_window.c  mlx_expose_hook.c  mlx_flush_event.c  mlx_init.c  mlx_int.h  mlx_int_anti_resize_win.c  mlx_int_do_nothing.c  mlx_int_param_event.c  mlx_int_wait_first_expose.c  mlx_key_hook.c  mlx_loop.c  mlx_loop_hook.c  mlx_string_put.c  mlx_xpm.c
mlxlib/mlxosx/: Makefile  mlx.h  mlx_int.h  mlx_new_window.h  mlx_opengl.h  mlx_png.h
old/: GPUContext.cpp  main.cpp  window.cpp
old/inc/: GPUContext.hpp  GPUKernel.hpp
scenes/: boxes.json  colors.json  cones.json  cylinders.json  errors.json  lights.json  orig.json  planes.json  refract.json  scene.json  spheres.json  torus.json  triangles.json  union.json
src/: GPUArray.cpp  GPUContext.cpp  GPUKernel.cpp  event_hooks.cpp  global.cpp  init_gpu.cpp  init_mlx.cpp  init_scene.cpp  linalg.cpp  main.cpp  objects.cpp  parse_scene.cpp  window2.cpp
